--- a/hash-tag-map/rev-manifest.json
+++ b/hash-tag-map/rev-manifest.json
@@ -1,5 +1,7 @@
 {
   "css/brand_sprite.css": "css/brand_sprite.00145.css",
+  "css/demo.css": "css/demo.bba2b.css",
+  "css/demo1.css": "css/demo1.93b8d.css",
   "css/images_sprite.css": "css/images_sprite.4e27a.css",
   "css/yuewen.css": "css/yuewen.a1a3f.css",
   "js/fastclick.js": "js/fastclick.d6d5b.js",
