--- a/Yworkflow/package.json
+++ b/Yworkflow/package.json
@@ -1,6 +1,6 @@
 {
   "name": "QidianViewsTool",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "Rainszhang & Luolei",
   "license": "ISC",
   "description": "Qidian Project Local Tool",
@@ -13,11 +13,12 @@
     "clean": "gulp clean",
     "build": "gulp clean && sleep 1  && gulp build",
     "nocombo-publish": "npm run build && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views",
-    "publish": "gulp clean && sleep 1  && gulp build  && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp preview-combo  && gulp copy-config",
+    "publish": "gulp clean && sleep 1  && gulp build  && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp preview-combo --useLogic && gulp copy-config",
     "publish-skip": "gulp clean && sleep 1  && gulp build  && sleep 1 && gulp rev --skipV && gulp rev-fix && gulp rev-views && gulp preview-combo  && gulp copy-config",
     "static": "gulp static-html",
     "online-view": "npm run nocombo-publish && gulp static-html --envConf  build && gulp ftp-static && gulp ftp-views",
-    "online-preview": "npm run nocombo-publish && gulp static-html --envConf build --previews  && gulp ftp-static --previews && gulp ftp-views --previews"
+    "online-preview": "npm run nocombo-publish && gulp static-html --envConf build --previews  && gulp ftp-static --previews && gulp ftp-views --previews",
+    "publish-adv": "gulp clean && sleep 1  && gulp build  && sleep 1  && gulp rev && sleep 1 && gulp copy-hash-map && gulp rev-build-js && sleep 1  && gulp ana && gulp deps-update && gulp rev-fix-deps && gulp rev-views-deps  && gulp preview-combo --useLogic && gulp clean-ana && gulp copy-config"
   },
   "devDependencies": {
     "chalk": "^1.1.1",
@@ -25,10 +26,10 @@
     "cross-env": "^1.0.7",
     "dateformat": "^1.0.12",
     "del": "^2.2.0",
+    "fs": "0.0.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-buster": "^1.0.0",
-    "gulp-qidian-combo": "^0.0.1",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-copy": "0.0.2",
@@ -45,9 +46,11 @@
     "gulp-minify-css": "^1.2.2",
     "gulp-nodemon": "^2.0.4",
     "gulp-plumber": "^1.0.1",
+    "gulp-qidian-combo": "^0.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-resolve-dependencies": "^2.2.0",
     "gulp-rev-all": "^0.8.22",
-    "gulp-rev-custom-tag": "0.0.6",
+    "gulp-rev-custom-tag": "0.0.9",
     "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^2.1.1",
     "gulp-slash": "^1.1.3",
@@ -58,6 +61,8 @@
     "imagemin-pngquant": "^4.0.0",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
+    "lodash": "^4.13.1",
+    "madge": "^0.6.0",
     "merge-stream": "^1.0.0",
     "require-dir": "^0.3.0",
     "through2": "^2.0.1",
@@ -71,6 +76,7 @@
     "debug": "~2.2.0",
     "ejs": "^2.3.4",
     "express": "~4.13.3",
+    "gulp-prompt": "^0.2.0",
     "morgan": "^1.6.1",
     "request": "^2.67.0",
     "serve-favicon": "~2.3.0",
