--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
         "publish-skip": "gulp clean && sleep 1  && gulp build  && sleep 1 && gulp rev --skipV && gulp rev-fix && gulp rev-views && gulp preview-combo --useLogic && gulp copy-config",
         "static": "gulp static-html",
         "online-view": "npm run nocombo-publish && gulp static-html --envConf  build && gulp ftp-static && gulp ftp-views",
-        "online-preview": "npm run nocombo-publish && gulp static-html --envConf build --previews  && gulp ftp-static --previews && gulp ftp-views --previews",
+        "online-preview": "npm run nocombo-publish && gulp static-html --envConf pro --previews  && gulp ftp-static --previews && gulp ftp-views --previews",
         "publish-adv": "gulp clean && sleep 1  && gulp build  && sleep 1  && gulp rev && sleep 1 && gulp tmp-store && gulp copy-hash-map && gulp rev-fix && gulp rev-build-all && sleep 1 && gulp deps-update-all && gulp rev-fix-deps && gulp rev-views-deps && gulp rev-build-all && gulp preview-combo --useLogic && gulp clean-ana && gulp copy-config"
     },
     "devDependencies": {
         "chalk": "^1.1.1",
-        "cheerio": "^0.20.0",
-        "cross-env": "^2.0.0",
-        "dateformat": "^1.0.12",
+        "cheerio": "^0.22.0",
+        "cross-env": "^3.1.4",
+        "dateformat": "^2.0.0",
         "del": "^2.2.0",
         "fs": "0.0.2",
         "gulp": "^3.9.0",
@@ -32,14 +32,14 @@
         "gulp-buster": "^1.0.0",
         "gulp-compass": "^2.1.0",
         "gulp-concat": "^2.6.0",
-        "gulp-copy": "0.0.2",
+        "gulp-copy": "1.0.0",
         "gulp-csscomb": "^3.0.6",
-        "gulp-ejs": "^2.1.1",
+        "gulp-ejs": "^3.0.0",
         "gulp-eslint": "^3.0.1",
         "gulp-folders": "^1.1.0",
         "gulp-header": "^1.7.1",
         "gulp-image": "^2.5.0",
-        "gulp-image-resize": "^0.10.0",
+        "gulp-image-resize": "^0.12.0",
         "gulp-imagemin": "^3.0.3",
         "gulp-jsbeautifier": "^2.0.3",
         "gulp-jshint": "^2.0.1",
@@ -49,12 +49,12 @@
         "gulp-qidian-combo": "^0.2.2",
         "gulp-rename": "^1.2.2",
         "gulp-resolve-dependencies": "^2.2.0",
-        "gulp-rev-all": "^0.8.22",
-        "gulp-rev-custom-tag": "0.0.9",
+        "gulp-rev-all": "^0.9.7",
+        "gulp-rev-custom-tag": "0.1.0",
         "gulp-rev-replace": "^0.4.3",
-        "gulp-sass": "^2.1.1",
+        "gulp-sass": "^3.1.0",
         "gulp-slash": "^1.1.3",
-        "gulp-sourcemaps": "^1.6.0",
+        "gulp-sourcemaps": "^2.4.1",
         "gulp-uglify": "^2.0.0",
         "gulp-util": "^3.0.7",
         "gulp.spritesmith": "^6.0.0",
@@ -67,13 +67,13 @@
         "require-dir": "^0.3.0",
         "through2": "^2.0.1",
         "vinyl-buffer": "^1.0.0",
-        "vinyl-ftp": "^0.5.0",
-        "yargs": "^5.0.0"
+        "vinyl-ftp": "^0.6.0",
+        "yargs": "^6.6.0"
     },
     "dependencies": {
-        "body-parser": "~1.15.2",
+        "body-parser": "~1.16.1",
         "cookie-parser": "~1.4.0",
-        "debug": "~2.2.0",
+        "debug": "~2.6.1",
         "ejs": "^2.3.4",
         "express": "~4.14.0",
         "gulp-prompt": "^0.2.0",
