--- a/package.json
+++ b/package.json
@@ -9,10 +9,41 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bluebird": "^3.4.7",
+    "body-parser": "^1.16.1",
     "chalk": "^1.1.3",
+    "cmd-util": "^0.3.13",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-plugin-import": "^2.2.0",
     "figlet": "^1.2.0",
     "gulp": "^3.9.1",
+    "gulp-changed": "^2.0.0",
+    "gulp-css-url-to-absolute": "^1.0.1",
+    "gulp-csscomb": "^3.0.8",
+    "gulp-eslint": "^3.0.1",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-nodemon": "^2.2.1",
-    "require-dir": "^0.3.1"
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-util": "^3.0.8",
+    "morgan": "^1.8.1",
+    "require-dir": "^0.3.1",
+    "run-sequence": "^1.2.2",
+    "strip-json-comments": "^2.0.1",
+    "through2": "^2.0.3"
+  },
+  "dependencies": {
+    "async": "^2.1.5",
+    "del": "^2.2.2",
+    "eslint-config-airbnb": "^14.1.0",
+    "lodash": "^4.17.4",
+    "qs": "^6.4.0",
+    "url": "^0.11.0",
+    "url-parse": "^1.1.8"
   }
 }
