--- a/package.json
+++ b/package.json
@@ -1,86 +1,62 @@
 {
-    "name": "QidianViewsTool",
-    "version": "2.0.5",
-    "author": "Rainszhang & Luolei",
-    "license": "ISC",
-    "description": "Qidian Project Local Tool",
-    "scripts": {
-        "dev": "cross-env NODE_ENV=local  gulp dev",
-        "preview": "cross-env NODE_ENV=preview  gulp dev",
-        "init": "npm run build && npm run dev",
-        "sprite": "gulp auto-sprite && sleep 1 && gulp auto-sprite",
-        "go": "gulp clean  && gulp build  && gulp rev && gulp rev-fix && gulp rev-views",
-        "clean": "gulp clean",
-        "build": "gulp clean && sleep 1  && gulp build",
-        "nocombo-publish": "npm run build && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views",
-        "publish": "gulp clean && sleep 1  && gulp build  && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp preview-combo --useLogic && gulp copy-config",
-        "publish-skip": "gulp clean && sleep 1  && gulp build  && sleep 1 && gulp rev --skipV && gulp rev-fix && gulp rev-views && gulp preview-combo --useLogic && gulp copy-config",
-        "static": "gulp static-html",
-        "online-view": "npm run nocombo-publish && gulp static-html --envConf  build && gulp ftp-static && gulp ftp-views",
-        "online-preview": "npm run nocombo-publish && gulp static-html --envConf pro --previews  && gulp ftp-static --previews && gulp ftp-views --previews",
-        "publish-adv": "gulp clean && sleep 1  && gulp build  && sleep 1  && gulp rev && sleep 1 && gulp tmp-store && gulp copy-hash-map && gulp rev-fix && gulp rev-build-all && sleep 1 && gulp deps-update-all && gulp rev-fix-deps && gulp rev-views-deps && gulp rev-build-all && gulp preview-combo --useLogic && gulp clean-ana && gulp copy-config"
-    },
-    "devDependencies": {
-        "chalk": "^1.1.1",
-        "cheerio": "^0.22.0",
-        "cross-env": "^3.1.4",
-        "dateformat": "^2.0.0",
-        "del": "^2.2.0",
-        "fs": "0.0.2",
-        "gulp": "^3.9.0",
-        "gulp-autoprefixer": "^3.1.0",
-        "gulp-buster": "^1.0.0",
-        "gulp-compass": "^2.1.0",
-        "gulp-concat": "^2.6.0",
-        "gulp-copy": "1.0.0",
-        "gulp-csscomb": "^3.0.6",
-        "gulp-ejs": "^3.0.0",
-        "gulp-eslint": "^3.0.1",
-        "gulp-folders": "^1.1.0",
-        "gulp-header": "^1.7.1",
-        "gulp-image": "^2.5.0",
-        "gulp-image-resize": "^0.12.0",
-        "gulp-imagemin": "^3.0.3",
-        "gulp-jsbeautifier": "^2.0.3",
-        "gulp-jshint": "^2.0.1",
-        "gulp-minify-css": "^1.2.2",
-        "gulp-nodemon": "^2.0.4",
-        "gulp-plumber": "^1.0.1",
-        "gulp-qidian-combo": "^0.2.2",
-        "gulp-rename": "^1.2.2",
-        "gulp-resolve-dependencies": "^2.2.0",
-        "gulp-rev-all": "^0.9.7",
-        "gulp-rev-custom-tag": "0.1.0",
-        "gulp-rev-replace": "^0.4.3",
-        "gulp-sass": "^3.1.0",
-        "gulp-slash": "^1.1.3",
-        "gulp-sourcemaps": "^2.4.1",
-        "gulp-uglify": "^2.0.0",
-        "gulp-util": "^3.0.7",
-        "gulp.spritesmith": "^6.0.0",
-        "imagemin-pngquant": "^5.0.0",
-        "jshint": "^2.9.2",
-        "jshint-stylish": "^2.2.0",
-        "lodash": "^4.13.1",
-        "madge": "^1.0.0",
-        "merge-stream": "^1.0.0",
-        "require-dir": "^0.3.0",
-        "through2": "^2.0.1",
-        "vinyl-buffer": "^1.0.0",
-        "vinyl-ftp": "^0.6.0",
-        "yargs": "^6.6.0"
-    },
-    "dependencies": {
-        "body-parser": "~1.16.1",
-        "cookie-parser": "~1.4.0",
-        "debug": "~2.6.1",
-        "ejs": "^2.3.4",
-        "express": "~4.14.0",
-        "gulp-prompt": "^0.2.0",
-        "morgan": "^1.6.1",
-        "request": "^2.67.0",
-        "serve-favicon": "~2.3.0",
-        "underscore": "^1.8.3",
-        "vinyl-paths": "^2.1.0"
-    }
+  "name": "yworkflow",
+  "version": "3.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "hosts":"sudo gulp hosts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "bluebird": "^3.4.7",
+    "body-parser": "^1.16.1",
+    "chalk": "^1.1.3",
+    "cli-table": "^0.3.1",
+    "cmd-util": "^0.3.13",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-plugin-import": "^2.2.0",
+    "figlet": "^1.2.0",
+    "glob": "^7.1.1",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^2.0.0",
+    "gulp-css-url-to-absolute": "^1.0.1",
+    "gulp-csscomb": "^3.0.8",
+    "gulp-eslint": "^3.0.1",
+    "gulp-font-spider": "^0.3.6",
+    "gulp-if": "^2.0.2",
+    "gulp-image-resize": "^0.12.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-nunjucks": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.1.0",
+    "gulp-util": "^3.0.8",
+    "gulp.spritesmith": "^6.4.0",
+    "morgan": "^1.8.1",
+    "require-dir": "^0.3.1",
+    "run-sequence": "^1.2.2",
+    "strip-json-comments": "^2.0.1",
+    "through2": "^2.0.3"
+  },
+  "dependencies": {
+    "async": "^2.1.5",
+    "dateformat": "^2.0.0",
+    "del": "^2.2.2",
+    "eslint-config-airbnb": "^14.1.0",
+    "lodash": "^4.17.4",
+    "qs": "^6.4.0",
+    "url": "^0.11.0",
+    "url-parse": "^1.1.8"
+  }
 }
