--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "hosts": "sudo gulp hosts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +13,7 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "chalk": "^1.1.3",
+    "cli-table": "^0.3.1",
     "cmd-util": "^0.3.13",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
@@ -19,18 +21,29 @@
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-plugin-import": "^2.2.0",
+    "express-http-proxy": "^0.11.0",
     "figlet": "^1.2.0",
+    "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-changed": "^2.0.0",
     "gulp-css-url-to-absolute": "^1.0.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-eslint": "^3.0.1",
+    "gulp-font-spider": "^0.3.6",
+    "gulp-if": "^2.0.2",
+    "gulp-image-resize": "^0.12.0",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-newer": "^1.3.0",
     "gulp-nodemon": "^2.2.1",
+    "gulp-nunjucks": "^2.3.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.1.0",
     "gulp-util": "^3.0.8",
+    "gulp.spritesmith": "^6.4.0",
     "morgan": "^1.8.1",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
@@ -39,6 +52,7 @@
   },
   "dependencies": {
     "async": "^2.1.5",
+    "dateformat": "^2.0.0",
     "del": "^2.2.2",
     "eslint-config-airbnb": "^14.1.0",
     "lodash": "^4.17.4",
