--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "hosts":"sudo gulp hosts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "hosts": "sudo gulp hosts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "gulp dev"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "gulp-csscomb": "^3.0.8",
     "gulp-eslint": "^3.0.1",
     "gulp-font-spider": "^0.3.6",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-if": "^2.0.2",
     "gulp-image-resize": "^0.12.0",
     "gulp-load-plugins": "^1.5.0",
