--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dateformat": "^2.0.0",
     "del": "^2.2.2",
     "eslint-config-airbnb": "^14.1.0",
+    "express": "^4.15.2",
     "lodash": "^4.17.4",
     "qs": "^6.4.0",
     "url": "^0.11.0",
