--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yworkflow",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "gulp dev --path "
   },
-  "author": "",
+  "author": "luolei",
   "license": "ISC",
   "devDependencies": {
     "bluebird": "^3.4.7",
