--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
     "gulp-util": "^3.0.8",
-    "gulp.spritesmith": "^6.4.0",
+    "gulp.spritesmith": "6.4.0",
     "morgan": "^1.8.1",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
