--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yworkflow",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "eslint": "^3.16.1",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-plugin-import": "^2.2.0",
@@ -46,8 +47,9 @@
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
     "gulp-util": "^3.0.8",
-    "gulp.spritesmith": "6.1.0",
+    "gulp.spritesmith": "^6.1.0",
     "morgan": "^1.8.1",
+    "phantomjssmith": "^1.0.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "strip-json-comments": "^2.0.1",
@@ -57,10 +59,10 @@
     "async": "^2.1.5",
     "dateformat": "^2.0.0",
     "del": "^2.2.2",
-    "eslint-config-airbnb": "^14.1.0",
     "express": "^4.15.2",
     "lodash": "^4.17.4",
     "qs": "^6.4.0",
+    "sort-json": "^1.4.1",
     "url": "^0.11.0",
     "url-parse": "^1.1.8"
   }
