--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yworkflow",
-  "version": "3.0.7",
+  "version": "3.0.8",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -60,7 +60,6 @@
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "6.1.0",
     "morgan": "^1.8.1",
-    "phantomjssmith": "^1.0.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "strip-json-comments": "^2.0.1",
@@ -104,7 +103,7 @@
     "gulp-minimize": "^1.0.0",
     "gulp-newer": "^1.3.0",
     "gulp-nodemon": "^2.2.1",
-    "gulp-nunjucks": "^3.0.0",
+    "gulp-nunjucks": "2.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
