--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yworkflow",
-  "version": "3.0.8",
+  "version": "3.0.7",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,9 @@
   "_npmUser": {
     "name": "git-patrickliu",
     "email": "phil.liu.cn@gmail.com"
+  },
+  "bin": {
+    "yworkflow": "./bin/yworkflow.js"
   },
   "devDependencies": {
     "bluebird": "^3.4.7",
@@ -50,7 +53,7 @@
     "gulp-minimize": "^1.0.0",
     "gulp-newer": "^1.3.0",
     "gulp-nodemon": "^2.2.1",
-    "gulp-nunjucks": "^3.0.0",
+    "gulp-nunjucks": "^2.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
@@ -60,6 +63,7 @@
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "6.1.0",
     "morgan": "^1.8.1",
+    "phantomjssmith": "^1.0.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "strip-json-comments": "^2.0.1",
@@ -67,26 +71,21 @@
   },
   "dependencies": {
     "async": "^2.1.5",
-    "dateformat": "^2.0.0",
-    "del": "^3.0.0",
-    "express": "^4.15.2",
-    "lodash": "^4.17.4",
-    "qs": "^6.4.0",
-    "sort-json": "^1.4.1",
-    "url": "^0.11.0",
-    "url-parse": "^1.1.8",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "cmd-util": "^0.3.13",
     "cookie-parser": "^1.4.3",
+    "dateformat": "^2.0.0",
+    "del": "^3.0.0",
     "ejs": "^2.5.6",
     "eslint": "^4.1.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "express": "^4.15.2",
     "express-http-proxy": "^1.0.4",
     "figlet": "^1.2.0",
     "glob": "^7.1.1",
@@ -103,7 +102,6 @@
     "gulp-minimize": "^1.0.0",
     "gulp-newer": "^1.3.0",
     "gulp-nodemon": "^2.2.1",
-    "gulp-nunjucks": "2.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
@@ -112,10 +110,16 @@
     "gulp-svgstore": "^6.1.0",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "6.1.0",
+    "lodash": "^4.17.4",
+    "lru-cache": "^4.1.1",
     "morgan": "^1.8.1",
+    "qs": "^6.4.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
+    "sort-json": "^1.4.1",
     "strip-json-comments": "^2.0.1",
-    "through2": "^2.0.3"
+    "through2": "^2.0.3",
+    "url": "^0.11.0",
+    "url-parse": "^1.1.8"
   }
 }
