--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "express-http-proxy": "^1.0.4",
+    "express-http-proxy": "0.11.0",
     "figlet": "^1.2.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
@@ -50,7 +50,7 @@
     "gulp-minimize": "^1.0.0",
     "gulp-newer": "^1.3.0",
     "gulp-nodemon": "^2.2.1",
-    "gulp-nunjucks": "^3.0.0",
+    "gulp-nunjucks": "^2.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
@@ -87,7 +87,6 @@
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "express-http-proxy": "^1.0.4",
     "figlet": "^1.2.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
