--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "yworkflow",
-  "version": "3.0.8",
+  "version": "3.0.8-alpha.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "yworkflow": "npm install gulp gulp-cli ymini Yworkcli del-cli -g ",
     "hosts": "sudo gulp hosts --path ",
     "dev": "gulp dev --path "
+  },
+  "bin": {
+    "yworkflowcli": "bin/yworkflowcli"
   },
   "author": "luolei",
   "license": "ISC",
@@ -36,7 +39,7 @@
     "eslint-plugin-import": "^2.2.0",
     "express-http-proxy": "0.11.0",
     "figlet": "^1.2.0",
-    "glob": "^7.1.1",
+    "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
     "gulp-css-url-to-absolute": "^1.0.1",
@@ -71,6 +74,7 @@
     "del": "^3.0.0",
     "express": "^4.15.2",
     "lodash": "^4.17.4",
+    "optimist": "^0.6.1",
     "qs": "^6.4.0",
     "sort-json": "^1.4.1",
     "url": "^0.11.0",
