--- a/package.json
+++ b/package.json
@@ -63,34 +63,23 @@
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "strip-json-comments": "^2.0.1",
-    "through2": "^2.0.3",
-    "co-request": "^1.0.0",
-    "koa": "^1.4.0",
-    "yuenode-core": "^2.7.2",
-    "cookie": "^0.3.1"
+    "through2": "^2.0.3"
   },
   "dependencies": {
     "async": "^2.1.5",
-    "dateformat": "^2.0.0",
-    "del": "^3.0.0",
-    "express": "^4.15.2",
-    "lodash": "^4.17.4",
-    "qs": "^6.4.0",
-    "sort-json": "^1.4.1",
-    "url": "^0.11.0",
-    "url-parse": "^1.1.8",
-    "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
-    "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "cmd-util": "^0.3.13",
     "cookie-parser": "^1.4.3",
+    "dateformat": "^2.0.0",
+    "del": "^3.0.0",
     "ejs": "^2.5.6",
     "eslint": "^4.1.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "express": "^4.15.2",
     "figlet": "^1.2.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
@@ -115,10 +104,23 @@
     "gulp-svgstore": "^6.1.0",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "6.1.0",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.1",
+    "qs": "^6.4.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
+    "sort-json": "^1.4.1",
     "strip-json-comments": "^2.0.1",
-    "through2": "^2.0.3"
+    "through2": "^2.0.3",
+    "url": "^0.11.0",
+    "url-parse": "^1.1.8",
+    "bluebird": "^3.4.7",
+    "chalk": "^1.1.3",
+    "koa": "^1.4.0",
+    "koa-static": "^4.0.1",
+    "co-request": "^1.0.0",
+    "yuenode-core": "^2.7.2",
+    "koa-router": "^5.4.0",
+    "cookie": "^0.3.1"
   }
 }
