--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "gulp dev --path "
   },
   "bin": {
-    "yworkflowcli": "bin/yworkflowcli"
+    "yworkflow": "bin/yworkflow"
   },
   "author": "luolei",
   "license": "ISC",
@@ -70,27 +70,21 @@
   },
   "dependencies": {
     "async": "^2.1.5",
-    "dateformat": "^2.0.0",
-    "del": "^3.0.0",
-    "express": "^4.15.2",
-    "lodash": "^4.17.4",
-    "optimist": "^0.6.1",
-    "qs": "^6.4.0",
-    "sort-json": "^1.4.1",
-    "url": "^0.11.0",
-    "url-parse": "^1.1.8",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "cmd-util": "^0.3.13",
     "cookie-parser": "^1.4.3",
+    "dateformat": "^2.0.0",
+    "del": "^3.0.0",
     "ejs": "^2.5.6",
     "eslint": "^4.1.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "express": "^4.15.2",
     "figlet": "^1.2.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
@@ -115,10 +109,18 @@
     "gulp-svgstore": "^6.1.0",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "6.1.0",
+    "iconv-lite": "^0.4.18",
+    "linebyline": "^1.3.0",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.1",
+    "optimist": "^0.6.1",
+    "qs": "^6.4.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
+    "sort-json": "^1.4.1",
     "strip-json-comments": "^2.0.1",
-    "through2": "^2.0.3"
+    "through2": "^2.0.3",
+    "url": "^0.11.0",
+    "url-parse": "^1.1.8"
   }
 }
