--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yworkflow",
-  "version": "3.0.9",
+  "version": "3.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -24,7 +24,7 @@
     "name": "git-patrickliu",
     "email": "phil.liu.cn@gmail.com"
   },
-  "devDependencies": {
+  "dependencies": {
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "chalk": "^1.1.3",
@@ -37,7 +37,6 @@
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "express-http-proxy": "0.11.0",
     "figlet": "^1.2.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
@@ -66,9 +65,7 @@
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "strip-json-comments": "^2.0.1",
-    "through2": "^2.0.3"
-  },
-  "dependencies": {
+    "through2": "^2.0.3",
     "async": "^2.1.5",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
@@ -77,6 +74,7 @@
     "cmd-util": "^0.3.13",
     "cookie-parser": "^1.4.3",
     "dateformat": "^2.0.0",
+    "express-http-proxy": "0.11.0",
     "del": "^3.0.0",
     "ejs": "^2.5.6",
     "eslint": "^4.1.1",
