--- a/package.json
+++ b/package.json
@@ -67,9 +67,13 @@
   },
   "dependencies": {
     "async": "^2.1.5",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
+    "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "cmd-util": "^0.3.13",
+    "co-request": "^1.0.0",
+    "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "dateformat": "^2.0.0",
     "del": "^3.0.0",
@@ -104,6 +108,9 @@
     "gulp-svgstore": "^6.1.0",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "6.1.0",
+    "koa": "^1.4.0",
+    "koa-router": "^5.4.0",
+    "koa-static": "^2.1.0",
     "lodash": "^4.17.4",
     "morgan": "^1.8.1",
     "qs": "^6.4.0",
@@ -114,13 +121,6 @@
     "through2": "^2.0.3",
     "url": "^0.11.0",
     "url-parse": "^1.1.8",
-    "bluebird": "^3.4.7",
-    "chalk": "^1.1.3",
-    "koa": "^1.4.0",
-    "koa-static": "^4.0.1",
-    "co-request": "^1.0.0",
-    "yuenode-core": "^2.7.2",
-    "koa-router": "^5.4.0",
-    "cookie": "^0.3.1"
+    "yuenode-core": "^2.7.2"
   }
 }
