--- a/package.json
+++ b/package.json
@@ -25,56 +25,14 @@
     "email": "phil.liu.cn@gmail.com"
   },
   "dependencies": {
-    "bluebird": "^3.4.7",
-    "body-parser": "^1.16.1",
-    "chalk": "^1.1.3",
-    "cli-table": "^0.3.1",
-    "cmd-util": "^0.3.13",
-    "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.6",
-    "eslint": "^4.1.1",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-config-airbnb-base": "^11.1.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "figlet": "^1.2.0",
-    "glob": "^7.1.2",
-    "gulp": "^3.9.1",
-    "gulp-changed": "^3.1.0",
-    "gulp-css-url-to-absolute": "^1.0.1",
-    "gulp-csscomb": "^3.0.8",
-    "gulp-eslint": "^4.0.0",
-    "gulp-font-spider": "^0.3.6",
-    "gulp-html-beautify": "^1.0.1",
-    "gulp-if": "^2.0.2",
-    "gulp-image-resize": "^0.12.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-minimize": "^1.0.0",
-    "gulp-newer": "^1.3.0",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-nunjucks": "^2.3.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-svgmin": "^1.2.3",
-    "gulp-svgstore": "^6.1.0",
-    "gulp-util": "^3.0.8",
-    "gulp.spritesmith": "6.1.0",
-    "morgan": "^1.8.1",
-    "require-dir": "^0.3.1",
-    "run-sequence": "^1.2.2",
-    "strip-json-comments": "^2.0.1",
-    "through2": "^2.0.3",
     "async": "^2.1.5",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "chalk": "^1.1.3",
-    "cli-table": "^0.3.1",
     "cmd-util": "^0.3.13",
+    "compare-version": "^0.1.2",
     "cookie-parser": "^1.4.3",
     "dateformat": "^2.0.0",
-    "express-http-proxy": "0.11.0",
     "del": "^3.0.0",
     "ejs": "^2.5.6",
     "eslint": "^4.1.1",
@@ -83,6 +41,7 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
     "express": "^4.15.2",
+    "express-http-proxy": "0.11.0",
     "figlet": "^1.2.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
@@ -113,6 +72,7 @@
     "morgan": "^1.8.1",
     "optimist": "^0.6.1",
     "qs": "^6.4.0",
+    "request": "^2.81.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "sort-json": "^1.4.1",
