--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yworkflow",
-  "version": "3.1.8",
+  "version": "3.1.9",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "chalk": "^1.1.3",
+    "cli-table": "^0.3.1",
     "cmd-util": "^0.3.13",
     "compare-version": "^0.1.2",
     "cookie-parser": "^1.4.3",
