--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dateformat": "^2.0.0",
     "del": "^3.0.0",
     "ejs": "^2.5.6",
+    "end-of-stream": "^1.4.0",
     "eslint": "^4.1.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-airbnb-base": "^11.1.0",
@@ -61,10 +62,12 @@
     "gulp-nunjucks": "2.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
+    "gulp-usemin": "^0.3.28",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "6.1.0",
     "iconv-lite": "^0.4.18",
