--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
+    "gulp-clean-css": "^3.9.0",
     "gulp-css-url-to-absolute": "^1.0.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-eslint": "^4.0.0",
